Add: added the date-time in the html and styled in css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <h1>TODO LIST</h1>
             <img src="./assets/refresh.png" class="icons">
         </div>
+        <div id="date-time">
+            <h1 id="time">00.00</h1>
+            <h2 id="date">00 - 00 - 2000</h2>
+        </div>
         <div id="main-content" class=" padding">
             <div class="list">
                 <img src="./assets/check-button.png" class="icons">
