Add: Added some style, and in the app.js the constants and functions signs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="main-container">
         <div id="header" class=" padding">
             <h1>TODO LIST</h1>
-            <img src="./assets/refresh.png" class="icons">
+            <img src="./assets/refresh.png" class="icons" id="refresh">
         </div>
         <div id="date-time">
             <h1 id="time">00.00</h1>
@@ -24,12 +24,12 @@
         </div>
         <div id="main-content" class=" padding">
             <div class="list">
-                <img src="./assets/check-button.png" class="icons">
+                <img src="./assets/check-button.png" class="icons" id="check">
                 <p>Example text</p>
-                <img src="./assets/delete.png" class="icons delete">
+                <img src="./assets/delete.png" class="icons delete" id="delete">
             </div>
         </div>
-        <div id="footer" class=" padding">
+        <div id="footer" class=" padding" id="add">
             <img src="./assets/plus.png" class="icons">
             <h2>ADD A TODO</h2>
         </div>
