Add: added the add todo logics

--- a/index.html
+++ b/index.html
@@ -21,16 +21,10 @@
             <h1 id="time">00.00</h1>
             <h2 id="date">00 - 00 - 2000</h2>
         </div>
-        <div id="main-content" class=" padding">
-            <div class="list">
-                <img src="./assets/check-button.png" class="icons" id="check">
-                <p>Example text</p>
-                <img src="./assets/delete.png" class="icons delete" id="delete">
-            </div>
-        </div>
-        <div id="footer" class=" padding" id="add">
+        <div id="main-content" class=" padding"></div>
+        <div class=" padding footer" id="add">
             <img src="./assets/plus.png" class="icons">
-            <h2>ADD A TODO</h2>
+            <h2 id="addText">ADD A TODO</h2>
         </div>
     </div>
     
